Fixed loan-table alignment with page buttons.

--- a/src/App.css
+++ b/src/App.css
@@ -646,7 +646,7 @@
 }
 
 .loan-table {
-  margin-left: 2.5%;
+  margin-left: 1.3%;
   max-width: 95%;
   border:none;
   border-left:solid;
